--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ rope==1.7.0
 six==1.16.0
 snowballstemmer==2.2.0
 tenacity==8.2.2
-tiktoken==0.5.1
+tiktoken
 timeout-decorator==0.5.0
 toml==0.10.2
 tomli==2.0.1
